--- a/frontend/src/pages/movie.module.css
+++ b/frontend/src/pages/movie.module.css
@@ -90,6 +90,9 @@
   margin-top: 30px;
   width: 300px;
   height: 200px;
+  background-color: #222;
+  color: #fafaff;
+  font-weight: bolder;
 }
 
 #element {
