started adding the actors model

--- a/frontend/src/pages/movie.module.css
+++ b/frontend/src/pages/movie.module.css
@@ -1,16 +1,19 @@
 #movies {
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 #movie_obj {
   margin-bottom: 40px;
-  padding-top: 100px;
+  /* margin-top: 50px; */
+  padding: 30px 20px;
+  background-color: #111;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
   /* background-image: linear-gradient(to right, #ec4899 , #8b5cf6); */
   /* className="bg-gradient-to-r from-purple-500 to-pink-500" */
+
 }
 
 #img_container {
@@ -28,7 +31,7 @@
   padding: 20px;
   font-family: montserrat;
   color: #fafaff;
-
+  background-color: #111;
 }
 
 .movie_review_title:before {
@@ -93,6 +96,12 @@
   background-color: #222;
   color: #fafaff;
   font-weight: bolder;
+}
+
+#review_btn{
+  padding: 12px 8px;
+  font-family: montserrat;
+  margin-top: 15px;
 }
 
 #element {
